app/assets/stylesheets/application.sass
$columnal-grid-width: 970px !default
@import compass/reset
@import compass/css3
@import columnal/grid
@import colorbox
@import fonts

.container
  +grid-container
.row
  +grid-row
.hidden
  display: none

iframe
  display: block
  width: 80%
  margin: 0 auto


body
  background: image-url('pattern.jpg')
  font-family: "Proxima Nova", "Tahoma"
p
  line-height: 1.4em
  font-size: .9em
  width: 85%
  margin: 0 auto

h1, h2, h3
  font-family: "Populaire"
  font-size: 4em
  padding: .4em 0

h2
  font-size: 3em

h3
  font-size: 1.6em

a
  outline: none

strong
  font-weight: bold

// Login bar
header
  background: white
  padding-top: .25em
  padding-bottom: .25em
  line-height: 40px
  color: lighten(gray, 10%)
  font-size: .8em
  +box-shadow(0 1px 6px gray)
  overflow: auto
  img
    float: left
    margin: 0
    padding: .4em
.share
  float: right
  position: absolute
  right: 20% 
  .fb-like, .tw-like
    display: inline
    position: relative
    top: .9em
    margin-left: .8em
  .fb-like
    top: .6em


// Show form buttons
a.show_form
  display: inline-block
  +transition(.2s)
  &:first-child
    margin: .5em 2.1em 0 11em
  &.show_fb_form
    position: relative
    top: 2px
  &:hover
    opacity: .85

.counter
  span
    font-family: Lucida Console, monospace
    display: inline-block
    background: image-url('counter.png') right 10px no-repeat
    font-size: 42px
    width: 235px
    height: 40px
    padding-right: 60px
    padding-top: 41px
    text-align: right
    letter-spacing: 2px
    line-height: 0
    color: white

h3
  color: white

form
  padding: .4em
  h3
    margin-bottom: .8em
  label 
    background: lighten(gray, 45%) 
    width: 100%
    padding: .8em
    margin: .8em 0
    width: 93%
    &.error
      font-size: .7em
      color: red
      padding: 0
      margin: .2em 0
      display: block
      text-align: center
  input[type='text'], input[type='tel']
    margin-left: 1em
    padding: .4em
    width: 55% !important
  input.sbmt
    display: block
    margin: 2em auto
    margin-bottom: 0 
    +transition(.2s)
    &:hover
      opacity: .8
  &#new_email
    label
      display: block
    input[type='text'], input[type='tel'], input[type='file']
      margin-left: 1em
      padding: .4em
      width: 70% !important   

.call, .streaming, .army
  text-align: center
  h2
    padding-top: 1em

article.call_to_action
  background: image-url('bg.jpg') center top no-repeat

article.call_to_action
  h1
    width: 100%
    clear: both
  .content
    min-height: 4em 
    text-align: center
  .congrats
    text-align: center
    margin-top: -1.5em
    color: white
  .share
    float: none
    width: 25% !important
    position: inherit 
    margin: .5em auto
    .fb-like, .tw-like
      display: inline
      clear: both
  .actions
    h2
      text-align: center
      color: white
      font-size: 2.5em
    padding: 3em 0
    background: image-url('kids-top.png') no-repeat center bottom

.streaming
  background: image-url('pattern2.jpg')
  p
    color: white
  .kids
    background: image-url('kids.png') no-repeat center
  .video
    padding: 4em 0 0 0
    background: image-url('green-grass.png') no-repeat center bottom
    iframe
      height: 400px
      margin-bottom: 1em
    .actions
      width: 30%
      margin: 0 auto
      padding: .5em 0
      padding-bottom: 0
      &:hover
        opacity: .8
    span.info
      font-size: .7em
      display: block
      width: 60%
      margin: 0 auto
      margin-top: -.5em
      padding-bottom: .8em
      color: lighten(gray, 45%)
      font-style: italic
      +text-shadow(1px 1px 2px black)
      

.army
  background: image-url('bg.jpg') center top no-repeat
  .content
    height: 7em
  .users
    padding: 8em 0 0 0
    padding-bottom: 1em
    background: image-url('bg_army_bottom.png') center bottom no-repeat
  ul
    width: 35%
    margin: 0 auto
    text-align: left
    vertical-align: bottom
    li
      display: inline-block
      margin: .2em 1em .2em .9em
      .name
        display: none
      img
        border: 2px solid black

ul.list
  li
    display: block
    overflow: hidden
    width: 99%
    margin: .6em 0
    +box-shadow(0 1px 6px lightgray)
    border-bottom: 2px dashed lighten(gray, 50%)
    .image
      float: left
      margin: 1em .4em
      margin-bottom: 0em
      img
        +border-radius(40px)
    .name
      line-height: 5.5em
      text-transform: capitalize
.see_all
  color: white
  font-weight: bold
  letter-spacing: 1px
  padding-bottom: 1em
  margin-bottom: 1em
  text-transform: uppercase
  font-size: .9em
  &:hover
    text-decoration: none
    color: orange
.new_fb
  label
    display: block
    input
      margin-top: 1em

#notify_modal
  p
    margin-top: 1em

